--- a/ReadMe.htm
+++ b/ReadMe.htm
@@ -1,8 +1,6 @@
 ﻿========================================================================
-MFC win32 Extended-CComboBox C++
+MFC win32 Adding New Theme Variations to the MFC Ribbon (CMFCVisualManager) C++
 ========================================================================
-
-A combobox control which shows a drop down window to assist the user.
 
 This is a copy from peterboulton,  [codeproject](https://www.codeproject.com/Articles/1213164/%2FArticles%2F1213164%2FAdding-New-Theme-Variations-to-the-MFC-Ribbon).
 
